<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_reservation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start"
        android:background="@color/slightlyWhite">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" android:id="@+id/editCar">

        <include
                android:id="@+id/appBar"
                layout="@layout/app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/immatricolazioneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/immatricolazione"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="@color/slightlyWhite"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintBottom_toTopOf="@+id/vehiclePlateLayout"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageCar">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/immatricolazione"
                    android:inputType="number"
                    android:maxLength="4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vehiclePlateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vehicle_plate"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="@color/slightlyWhite"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@+id/vehicleModelLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@+id/immatricolazioneLayout">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vehiclePlate"
                    android:inputType="text"
                    android:maxLength="7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vehicleModelLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vehicle_model"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="@color/slightlyWhite"
                app:layout_constraintBottom_toTopOf="@+id/vehicleLocationLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@+id/vehiclePlateLayout"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vehicleModel"
                    android:inputType="text"
                    android:maxLength="20"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vehicleLocationLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="@color/slightlyWhite"
                app:layout_constraintBottom_toTopOf="@+id/vehicleSeatsLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@+id/vehicleModelLayout"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vehicleLocation"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vehicleSeatsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vehicle_seats"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="@color/slightlyWhite"
                app:layout_constraintBottom_toTopOf="@+id/vehicleDateLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@+id/vehicleLocationLayout"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vehicleSeats"
                    android:inputType="number"
                    android:maxLength="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vehicleDateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vehicle_date"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="@color/slightlyWhite"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="0.714"
                app:layout_constraintTop_toBottomOf="@+id/vehicleSeatsLayout"
                app:layout_constraintBottom_toTopOf="@+id/vehicleConfirm">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vehicleDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/clearEndDate"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icon_clear"
                android:background="@drawable/icon_clear"
                app:layout_constraintBottom_toTopOf="@+id/vehicleMillis"
                app:layout_constraintTop_toTopOf="@+id/vehicleDateLayout"
                app:layout_constraintEnd_toEndOf="@+id/vehicleDateLayout"
                android:layout_marginEnd="8dp"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/vehicleMillis"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/vehicleDateLayout"
                app:layout_constraintStart_toStartOf="@+id/vehicleDateLayout"
                app:layout_constraintEnd_toEndOf="@+id/vehicleDateLayout"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/vehicleConfirm"
                android:text="@string/vehicle_confirm"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/vehicleDateLayout"
                app:layout_constraintStart_toStartOf="@+id/vehicleDateLayout"
                app:layout_constraintEnd_toEndOf="@+id/vehicleDateLayout"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                style="@style/Widget.MaterialComponents.Button" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"/>
        <ImageView
                android:layout_width="250dp"
                android:layout_height="140dp" app:srcCompat="@drawable/icon_auto"
                android:id="@+id/imageCar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/immatricolazioneLayout"
                app:layout_constraintTop_toBottomOf="@+id/appBar"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>