...
                app:layout_constraintBottom_toBottomOf="@+id/imageCar"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:background="@drawable/circle_border_green"/>

        <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/deleteVehicle"
                android:minWidth="40dp"
                android:maxWidth="40dp"
                android:minHeight="40dp"
                android:maxHeight="40dp"
                android:layout_height="40dp"
                android:layout_width="40dp"
...

        </ScrollView>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addVehicle"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="10dp"
            android:src="@drawable/icon_plus"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
...
